# lbp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: example_filesystemcpp.cpp  example_kernel.cpp  example_knn.cpp  example_lbp.cpp  example_lbp_knn.cpp  plot_results.py
include/lbp/: knn.hpp  lbp.hpp
